@@ -395,13 +395,23 @@ class Connection(_ConnectionBase):
         return buf
 
     def _send_bytes(self, buf):
-        # For wire compatibility with 3.2 and lower
         n = len(buf)
-        self._send(struct.pack("!i", n))
-        # The condition is necessary to avoid "broken pipe" errors
-        # when sending a 0-length buffer if the other end closed the pipe.
-        if n > 0:
-            self._send(buf)
+        # For wire compatibility with 3.2 and lower
+        header = struct.pack("!i", n)
+        if n > 16384:
+            # The payload is large so Nagle's algorithm won't be triggered
+            # and we'd better avoid the cost of concatenation.
+            chunks = [header, buf]
+        elif n > 0:
+            # Issue # 20540: concatenate before sending, to avoid delays due
+            # to Nagle's algorithm on a TCP socket.
+            chunks = [header + buf]
+        else:
+            # This code path is necessary to avoid "broken pipe" errors
+            # when sending a 0-length buffer if the other end closed the pipe.
+            chunks = [header]
+        for chunk in chunks:
+            self._send(chunk)
 
     def _recv_bytes(self, maxsize=None):
         buf = self._recv(4)
